--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "husky": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
     "coverage": "npm run test -- --coverage",
-    "eject": "react-scripts eject"
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
