--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rmc-date-picker": "^6.0.10",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
