--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "classnames": "^2.3.1",
+    "mathjs": "^9.4.2",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
