--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.0",
     "@types/react-router-dom": "^5.1.7",
     "husky": "^6.0.0"
   },
