--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
+    "lint": "eslint ./src",
     "coverage": "npm run test -- --coverage",
     "prepare": "husky install"
   },
