--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -39,9 +39,9 @@ jobs:
 
       - name: Run linter
         run: deno lint
-
-      - name: Cache dependencies
-        run: deno cache deps.ts
+#
+#      - name: Cache dependencies
+#        run: deno cache deps.ts
 
       - name: Run tests
         run: deno test -A --unstable
