--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
+    "test": "TZ=Asia/Shanghai react-scripts test --watchAll=false",
     "lint": "eslint ./src",
     "coverage": "npm run test -- --coverage",
     "prepare": "husky install"
